# trailpolicy

./: .gitignore  README.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/trailpolicy/: __init__.py  cli.py  config.py
cli/trailpolicy/core/: access_advisor.py  action_mapper.py  athena.py  cloudtrail.py  event_parser.py  policy_builder.py  resource_extractor.py
cli/trailpolicy/data/: ct_iam_overrides.json
cli/trailpolicy/output/: diff_reporter.py  json_formatter.py  terraform_formatter.py
cli/trailpolicy/tests/: test_access_advisor.py  test_action_mapper.py  test_athena.py  test_cli.py  test_cloudtrail.py  test_diff_reporter.py  test_event_parser.py  test_json_formatter.py  test_policy_builder.py  test_resource_extractor.py  test_terraform_formatter.py
cli/trailpolicy/tests/fixtures/: sample_events.json
scripts/: build-lambda.sh
terraform/: Makefile
terraform/environments/commercial/: terraform.tfvars
terraform/environments/govcloud/: terraform.tfvars
terraform/environments/org-cod/: backend.hcl  terraform.tfvars
terraform/environments/org-fsa/: backend.hcl  terraform.tfvars
terraform/environments/org-sbx/: backend.hcl  terraform.tfvars
terraform/phase0-bootstrap/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/phase1-foundation/: main.tf  outputs.tf  variables.tf
terraform/phase2-query-layer/: main.tf  outputs.tf  variables.tf
terraform/phase5-notification-test/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/phase6-automation/: main.tf  outputs.tf  package_lambda.sh  variables.tf
(+18 files in other folders)
