[project]
name = "trailpolicy"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.0",
    "jmespath>=1.0",
]

[project.optional-dependencies]
athena = ["pyathena>=3.0"]
terraform = ["python-hcl2>=4.0"]
dev = ["pytest>=8.0", "moto>=5.0", "pytest-cov"]
lambda = []

[project.scripts]
trailpolicy = "trailpolicy.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
